<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditExpense" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/category"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/note"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAmount"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/note"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_below="@+id/editDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="66dp"
            android:text="@string/name"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/editCategory"
            android:focusableInTouchMode="false"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/category"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:onClick="pickCategory"
            android:textColorHighlight="@color/darkGreen"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editNote"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/note"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/amount"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/date"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCategory"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNote"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="166dp"
            android:layout_marginRight="166dp"
            android:onClick="run"
            android:text="@string/save" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:textColorHighlight="@color/color_white"
            android:textColorLink="@color/color_white"
            android:textCursorDrawable="@color/darkGreen"
            android:textIsSelectable="false"
            android:visibility="visible" />

    </RelativeLayout>
</ScrollView>