<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/minButton"
        android:layout_width="116dp"
        android:layout_height="106dp"
        android:layout_above="@+id/minText"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="245dp"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circular_button"
        android:onClick="onClickRetrieveMin"
        android:src="@drawable/min_icon" />

    <TextView
        android:id="@+id/minText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="278dp"
        android:text="@string/min"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="491dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/circular_button"
        android:onClick="backHome"
        android:src="@drawable/home_button" />

    <TextView
        android:id="@+id/minText2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:layout_marginBottom="279dp"
        android:text="@string/max"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/maxButton"
        android:layout_width="106dp"
        android:layout_height="108dp"
        android:layout_above="@+id/minText2"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="243dp"
        android:layout_marginRight="243dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/circular_button"
        android:onClick="onClickRetrieveMax"
        android:src="@drawable/max_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:text="@string/expense_stats"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />


</RelativeLayout>